<?xml version="1.0"?>
<package format="2">
  <name>msa010_ros</name>
  <version>0.0.0</version>
  <description>
    The msa010 tof depth camera ROS driver, 
    and the obstacle and cliff detector.
  </description>

  <maintainer email="oscar@todo.todo">oscar</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>

  <!-- <export>  </export> -->
</package>
